# agents-for-openbb

./: Procfile  README.md  pyproject.toml
01-simple-copilot/: README.md  pyproject.toml
02-simple-copilot-local-function-calling/: README.md
03-simple-copilot-reasoning-steps/: README.md
04-simple-copilot-openbb-function-calling/: README.md
05-simple-copilot-openbb-citations/: README.md  pyproject.toml
06-simple-copilot-pdf-handling/: README.md
1000-portfolio-commentary/: Dockerfile  README.md  fly.toml  pyproject.toml
20-simple-copilot-deepseek-v3/: README.md
21-reasoning-copilot-deepseek-r1/: README.md  pyproject.toml
22-simple-copilot-llama4-maverick-function-calling/: README.md
30-vanilla-agent-raw-widget-data/: README.md
31-vanilla-agent-reasoning-steps/: README.md
32-vanilla-agent-raw-widget-data-citations/: README.md
33-vanilla-agent-charts/: README.md
34-vanilla-agent-tables/: README.md
35-vanilla-agent-pdf/: README.md
70-portfolio-commentary/: Dockerfile  README.md
90-gemini-experimental/: README.md  pyproject.toml
99-advanced-examples/: README.md
WIP/: README.md
code-interpreter-copilot/: README.md
cortex-chatbot/: .env.example  README.md  environment.yml  requirements.txt
docs/: migration-guide.md
example-copilot/: pyproject.toml
example_copilot/: copilots.json  main.py
llama31-local-copilot/: pyproject.toml
mistral-copilot/: pyproject.toml
portfolio-commentary/: README.md  requirements.txt
sambanova/: README.md  pyproject.toml
test_payloads/: message_with_primary_widget.json  multiple_messages.json  (+3 more)
(+118 files in other folders)
